# multi-modal-WS-foundational-training

./: .coverage  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: PRD.md  SPECIFICATION.md
notebooks/00_setup/.ipynb_checkpoints/: 00_welcome-checkpoint.ipynb
notebooks/01_foundations/.ipynb_checkpoints/: 01_neurons_and_layers-checkpoint.ipynb
notebooks/02_supervised/: 01_supervised_learning.ipynb
notebooks/03_graphs/: 01_graph_theory_basics.ipynb
notebooks/04_topology/: 01_watts_strogatz.ipynb
notebooks/05_sparse/: 01_sparse_neural_networks.ipynb
notebooks/06_unsupervised/: 01_autoencoders.ipynb
notebooks/07_dynamic_sparse/: 01_dynamic_sparse_training.ipynb
notebooks/08_modular/: 01_mixture_of_experts.ipynb
notebooks/09_multimodal/: 01_multimodal_architectures.ipynb
notebooks/10_capstone/: 01_build_architecture.ipynb
scripts/: setup_environment.py
src/: __init__.py
src/data/: __init__.py  datasets.py  loaders.py  transforms.py
src/models/: __init__.py  connectors.py  encoders.py  fusion.py  layers.py  multimodal.py
src/topology/: __init__.py  graphs.py  metrics.py  rewiring.py  sparse_masks.py
src/training/: __init__.py  callbacks.py  sparse_training.py  trainer.py
src/utils/: __init__.py  config.py  device.py  reproducibility.py
src/visualization/: __init__.py  graph_viz.py  topology_viz.py  training_viz.py
tests/: __init__.py  conftest.py  test_data.py  test_models.py  test_topology.py  test_training.py
web/: README.md  index.html  package.json
web/src/: App.jsx
web/src/components/: SmallWorldMetrics.jsx  SparsityEvolution.jsx  TrainingDashboard.jsx  WSGraphVisualization.jsx
ws_foundational_training.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
